--- a/ProjectManagement/Views/Shared/_AdminLayout.cshtml
+++ b/ProjectManagement/Views/Shared/_AdminLayout.cshtml
@@ -14,7 +14,7 @@
     <!-- custom style-->
     <link href="~/css/admin-layout.css?v=.4" rel="stylesheet" />
     <!-- side navbar style-->
-    <link href="~/css/side-navbar.css?v=.2" rel="stylesheet" />
+    <link href="~/css/side-navbar.css?v=3" rel="stylesheet" />
 
     <!-- others style-->
     @await RenderSectionAsync("Styles", false)
