--- a/ProjectManagement/Views/Shared/_Side_navbar.cshtml
+++ b/ProjectManagement/Views/Shared/_Side_navbar.cshtml
@@ -32,7 +32,7 @@
     <li>
         <strong>
             <span class="fas fa-user-tie"></span>
-            <a class="links" href="#">Project Employee/ focal</a>
+            <a class="links" href="#">Project Employee/ Focal</a>
         </strong>
     </li>
     <li>
