--- a/ProjectManagement/Views/Shared/_Side_navbar.cshtml
+++ b/ProjectManagement/Views/Shared/_Side_navbar.cshtml
@@ -8,12 +8,12 @@
     </li>
     <li>
         <strong>
-            <span class="fas fa-file-plus">
-            </span><i class="fas fa-caret-right"></i>Project
+            <span class="fas fa-file-plus"></span>
+            <i class="fas fa-caret-right"></i>Project
         </strong>
         <ul class="sub-menu">
             <li><a class="links" href="/Projects/AddProject/@Model">Project Entry</a></li>
-            <li><a class="links" href="#">Project List</a></li>
+            <li><a class="links" href="/Projects/List/@Model">Project List</a></li>
             <li><a class="links" href="#">Report</a></li>
         </ul>
     </li>
@@ -26,8 +26,12 @@
     <li>
         <strong>
             <span class="fas fa-database"></span>
-            <a class="links" href="#">Project Log Frame</a>
+            <i class="fas fa-caret-right"></i>Project Log Frame
         </strong>
+        <ul class="sub-menu">
+            <li><a class="links" href="/ProjectLogFrame/LogFrame/@Model">Log Frame</a></li>
+            <li><a class="links" href="/ProjectLogFrame/LogFrameIndicator/@Model">Log Frame Indicator</a></li>
+        </ul>
     </li>
     <li>
         <strong>
