--- a/ProjectManagement/Views/Shared/_AdminLayout.cshtml
+++ b/ProjectManagement/Views/Shared/_AdminLayout.cshtml
@@ -67,6 +67,8 @@
     <script src="~/js/notify.min.js"></script>
     <!--moment js-->
     <script src="~/js/moment.js"></script>
+    <!---imask js-->
+    <script src="https://unpkg.com/imask"></script>
     <!--sidebar-->
     <script src="https://cdn.muicss.com/mui-latest/js/mui.min.js"></script>
     <script src="~/js/sidedrawer-links.js"></script>
