--- a/ProjectManagement/Views/Projects/AddProject.cshtml
+++ b/ProjectManagement/Views/Projects/AddProject.cshtml
@@ -5,14 +5,8 @@
 }
 
 @section Styles{
-    <link href="~/pages-css/add-project.css?v=2" rel="stylesheet" />
-    <style>
-        #successMessage { display: none }
-        #donor-container span { background-color: #ddd; border-radius: 5px; padding: 4px 8px; margin-right: 7px; text-align: center; margin-bottom: 6px; display: inline-block; }
-        #donor-container span i { font-size: .9rem; cursor: pointer; margin-left: 5px; }
-
-        .remove { cursor: pointer }
-    </style>
+    <link href="~/pages-css/steper-style.css" rel="stylesheet" />
+    <link href="~/pages-css/add-project.css" rel="stylesheet" />
 }
 
 <div class="container">
