--- a/ProjectManagement/wwwroot/pages-css/add-project.css
+++ b/ProjectManagement/wwwroot/pages-css/add-project.css
@@ -1,18 +1,15 @@
 ﻿
-/*progressbar*/
-.progressbar {text-align: center;padding: 0; margin: 1.5rem 0; overflow: hidden; counter-reset: step; z-index: 1}
-.progressbar li { list-style-type: none; color: #33b5e5; text-transform: uppercase; font-size: 14px; width: 50%; float: left; position: relative; letter-spacing: 1px; }
-.progressbar li:before {text-align: center; content: counter(step); counter-increment: step; width: 35px; height: 35px; line-height: 36px; display: block; font-size: 18px; color: #333; background:#ddd; border-radius: 50%; margin: 0 auto 10px auto; }
-
-/*progressbar connectors*/
-.progressbar li:after { content: ''; width: 100%; height: 2px; background: #33b5e5; position: absolute; left: -50%; top: 17px; z-index: -1; /*put it behind the numbers*/ }
-.progressbar li:first-child:after { /*connector not needed before the first step*/ content: none; }
-
-/*marking active/completed steps green*/
-/*The number of the step and the connector before it = green*/
-.progressbar li.active:before, .progressbar li.active:after { background: #33b5e5; color: white; }
 
 /***form style***/
 .select-wrapper input.select-dropdown { margin: 0 0 .50rem; }
 fieldset legend { color: #484848; padding: 0 5px; font-size: 1.3rem; }
 #formAdd { display: none }
+
+#successMessage { display: none }
+#donor-container span { background-color: #ddd; border-radius: 5px; padding: 4px 8px; margin-right: 7px; text-align: center; margin-bottom: 6px; display: inline-block; }
+#donor-container span i { font-size: .9rem; cursor: pointer; margin-left: 5px; }
+
+.report-tems span, i { display: block }
+.report-tems i { color: #21b4e1; font-size: .9rem; }
+
+.remove { cursor: pointer }
